--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-github": "^5.0.2",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "~2.29.1",
     "eslint-plugin-no-async-foreach": "^0.1.1",
     "micromatch": "4.0.8",
     "nock": "^13.5.5",
