--- a/pr-checks/checks/go-tracing-autobuilder.yml
+++ b/pr-checks/checks/go-tracing-autobuilder.yml
@@ -6,7 +6,7 @@ env:
 steps:
   - uses: actions/setup-go@v5
     with:
-      go-version: "~1.23.0"
+      go-version: "1.24.0-rc.1"
       # to avoid potentially misleading autobuilder results where we expect it to download
       # dependencies successfully, but they actually come from a warm cache
       cache: false
