--- a/pr-checks/checks/build-mode-manual.yml
+++ b/pr-checks/checks/build-mode-manual.yml
@@ -2,6 +2,7 @@ name: "Build mode manual"
 description: "An end-to-end integration test of a Java repository built using 'build-mode: manual'"
 operatingSystems: ["ubuntu"]
 versions: ["nightly-latest"]
+installGo: "true"
 steps:
   - uses: ./../action/init
     id: init
