--- a/pr-checks/checks/go-custom-queries.yml
+++ b/pr-checks/checks/go-custom-queries.yml
@@ -5,12 +5,10 @@ operatingSystems:
 versions:
   - linked
   - nightly-latest
+installGo: "true"
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
-  - uses: actions/setup-go@v5
-    with:
-      go-version: ">=1.21.0"
   - uses: ./../action/init
     with:
       languages: go
