--- a/pr-checks/checks/go-indirect-tracing-workaround.yml
+++ b/pr-checks/checks/go-indirect-tracing-workaround.yml
@@ -4,11 +4,8 @@ description: "Checks that our workaround for indirect tracing for Go 1.21+ on Li
 operatingSystems: ["ubuntu"]
 # pinned to a version which does not support statically linked binaries for indirect tracing
 versions: ["default"]
+installGo: "true"
 steps:
-  - uses: actions/setup-go@v5
-    with:
-      # We need a Go version that ships with statically linked binaries on Linux
-      go-version: ">=1.21.0"
   - uses: ./../action/init
     with:
       languages: go
