--- a/pr-checks/checks/go-tracing-custom-build-steps.yml
+++ b/pr-checks/checks/go-tracing-custom-build-steps.yml
@@ -1,13 +1,8 @@
 name: "Go: tracing with custom build steps"
 description: "Checks that Go tracing traces the build when using custom build steps"
 operatingSystems: ["ubuntu", "macos"]
+installGo: "true"
 steps:
-  - uses: actions/setup-go@v5
-    with:
-      go-version: "~1.24.0"
-      # to avoid potentially misleading autobuilder results where we expect it to download
-      # dependencies successfully, but they actually come from a warm cache
-      cache: false
   - uses: ./../action/init
     with:
       languages: go
