--- a/pr-checks/checks/packaging-config-js.yml
+++ b/pr-checks/checks/packaging-config-js.yml
@@ -1,6 +1,7 @@
 name: "Packaging: Config file"
 description: "Checks that specifying packages using only a config file works"
 versions: ["linked", "default", "nightly-latest"] # This feature is not compatible with old CLIs
+installGo: "true"
 steps:
   - uses: ./../action/init
     with:
