--- a/pr-checks/checks/unset-environment.yml
+++ b/pr-checks/checks/unset-environment.yml
@@ -5,17 +5,15 @@ operatingSystems:
 versions:
   - linked
   - nightly-latest
+installGo: "true"
 steps:
   - uses: ./../action/init
     id: init
     with:
       db-location: ${{ runner.temp }}/customDbLocation
       # Swift is not supported on Ubuntu so we manually exclude it from the list here
-      languages: cpp,csharp,go,java,javascript,python,ruby 
+      languages: cpp,csharp,go,java,javascript,python,ruby
       tools: ${{ steps.prepare-test.outputs.tools-url }}
-  - uses: actions/setup-go@v5
-    with:
-      go-version: '>=1.21.0'
   - name: Build code
     shell: bash
     run: env -i PATH="$PATH" HOME="$HOME" ./build.sh
